kubernetes/Int/deployments/default/esphome/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: esphome
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:SkOotFiVmqwvxt8X46KA29whTyFhYXX1BStR,iv:hc8qsuQxM9UzvucpEi2Yr61MutdHin4/an/HQ9y/cJY=,tag:x545TTztwivJdq/1YVUKqg==,type:str]
          kind: Rule
          services:
            - name: esphome
              port: 6052
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTWjFYMTVPTFFzcFBLK01E
[...]
            6M5z14SvLJ87CvlATxANm9CE+/VVQI7Zf9lHUBigd/rGhWU9lg0Xhw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T15:13:56Z"
    mac: ENC[AES256_GCM,data:QS4wWaOpc3AsHbaKIcGrlwBqMR9XfoZVVHZea24AOGA60ye9i3fTRD4ioKJ3L55wbbG+wis+pjqx3VkLiyW/uOZ/X3ZGXdiuBzxeT9CHyJjBIEw0sVVCcVPC/dI4RzMIxa9YolZbD/4WDUwe2o+4WU0wTdb1E4IIaW4FQJceUAM=,iv:melEh4ahqd61iCx2FtzQcKjZrBZbRnQCOyxflghZQqE=,tag:FTCcqFAZCENmcZM4Gvv7Mw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
